update content and centered modal text

--- a/index.html
+++ b/index.html
@@ -577,11 +577,11 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Telegram Bots</button>
+              <button data-filter-btn>Python Bots</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>WIP</button>
+              <button data-filter-btn>Machine Learning</button>
             </li>
 
           </ul>
@@ -613,11 +613,11 @@
               </li>
 
               <li class="filter-item">
-                <button data-filter-btn>Telegram Bots</button>
+                <button data-filter-btn>Python Bots</button>
               </li>
 
               <li class="filter-item">
-                <button data-filter-btn>WIP</button>
+                <button data-filter-btn>Machine Learning</button>
               </li>
 
             </ul>
@@ -794,10 +794,9 @@
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="telegram bots">
-              <a href="#" data-img-src="./assets/images/thrift.png" data-title="EnviroThrift Bot" data-description="This project utilizes a Python Telegram bot to facilitate the buying and selling 
-                of second-hand goods and services. The bot uses MongoDB as the backend database, 
-                ensuring scalability and reliability. NLP techniques were employed to process and refine user inputs, 
+            <li class="project-item active" data-filter-item data-category="python bots">
+              <a href="#" data-img-src="./assets/images/thrift.png" data-title="EnviroThrift Bot" data-description="EnviroThrift is  a Telegram bot built on Python that facilitates the buying and selling 
+                of second-hand goods and services. The bot uses MongoDB as the database, ensuring scalability and reliability. NLP techniques were employed to process and refine user inputs, 
                 enhancing user experience. This project supports environmental conservation by repurposing second-hand goods, 
                 reducing waste, and promoting sustainability." data-date="Jan, 2023" data-techstack='
                 <ul class="clients-list has-scrollbar">
@@ -825,17 +824,14 @@
                 </figure>
                 <h3 class="project-title">EnviroThrift Bot</h3>
 
-                <p class="project-category">Telegram Bots</p>
+                <p class="project-category">Python Bots</p>
 
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="wip">
-              <a href="#" data-img-src="./assets/images/project-1.jpg" data-title="DeFi Portfolio + ML Analysis"
-                data-description="This project is focused on developing an NFT and cryptocurrency portfolio performance 
-                tracking tool along with ML-driven price predictions. The project uses Apache Airflow, Google Cloud Dataflow, 
-                and Google BigQuery to scrape market data. It integrates Moralis API to discover high resale value NFTs available 
-                for sale in various marketplaces." data-date="Work In Progress" data-techstack='
+            <li class="project-item active" data-filter-item data-category="machine learning">
+              <a href="#" data-img-src="./assets/images/project-1.jpg" data-title="DeFi Portfolio ML Analyzer"
+                data-description="This project is focused on developing an NFT and cryptocurrency portfolio performance tracking tool along with ML-driven price predictions. Market data fetched from Moralis API is processed in a data pipeline involving Apache Airflow, Google Cloud Dataflow, and Google BigQuery. Performed ML predictions using CNN-LSTM model on Tensorflow to successfully predict ETH prices with a R2 Score of 0.915. A simple React front-end was created to streamline the user experience." data-date="Machine Learning" data-techstack='
                 <ul class="clients-list has-scrollbar">
                   <li class="clients-item">
                     <div class="tooltip" data-tooltip="Apache Airflow">
@@ -859,17 +855,17 @@
                   </div>
                   <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
-                <h3 class="project-title">DeFi Portfolio + ML Analysis</h3>
-                <p class="project-category">WIP</p>
+                <h3 class="project-title">DeFi Portfolio ML Analyzer</h3>
+                <p class="project-category">Machine Learning</p>
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="wip">
+            <li class="project-item active" data-filter-item data-category="web development">
               <a href="#" data-img-src="./assets/images/rwm.png" data-title="RunWithMe"
                 data-description="RunWithMe is a social running platform that encourages users to post events inviting others to run with them. 
                 The platform is designed to boost motivation and user retention through peer accountability and positive influence. 
                 Users can create and join events, as well as accept or reject requests from others to join their runs. 
-                The application is built on a tech stack consisting of React, Next.js, Firebase, and Node.js, ensuring a robust and scalable solution." data-date="Work In Progress"
+                The application is built on a tech stack consisting of React, Next.js, Firebase, and Node.js, ensuring a robust and scalable solution." data-date="Web Development"
                 data-techstack='
                 <ul class="clients-list has-scrollbar">
                   <li class="clients-item">
@@ -900,7 +896,7 @@
                   <img src="./assets/images/rwm.png" alt="finance" loading="lazy">
                 </figure>
                 <h3 class="project-title">RunWithMe</h3>
-                <p class="project-category">WIP</p>
+                <p class="project-category">Web Development</p>
               </a>
             </li>
           </ul>
